--- a/gp_page1.html
+++ b/gp_page1.html
@@ -20,6 +20,7 @@
       <link rel="stylesheet" href="gp_reset.css" media="all">
       <link rel="stylesheet" href="gp_layout.css" media="screen">
       <link rel="stylesheet" href="gp_print.css" media="print">
+      <link rel="stylesheet" href="index.html">
 </head>
 
 <body>
